fix layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,10 @@
 @plugin "daisyui";
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
-
+*{
+    
+}
 body {
     font-family: "Manrope", sans-serif;
+    box-sizing: border-box;
 }
